Changelog of lizard-krw
===================================================


0.2 (unreleased)
----------------

- Area_search now matches ident instead of name.

- Fixed reverse urls.

- Added WaterBody.ident.

- Added initial South migration.


0.1 (2010-12-07)
----------------

- Copy the following items from krw-waternet:

   - models
   - views
   - urls
   - templates
   - layers
   - admin
   - js/css

- Initial library skeleton created by nensskel.  [Jack]